Start developing the plugin